===========================================
- Remove use of Art framework (geekwright)
- standardize names of classes, tables and constants to include "newbb" (geekwright)
- Use XMF whenever practical (geekwright)
- Simplify database migration strategy (geekwright)
- lots of warning/error cleanup (geekwright)
- extra code updates (mamba)
- Short syntax in array literals (mamba)

4.33 RC 13  (XOOPS 2.5.8)      (NOT RELEASED)
===========================================
- code cosmetics (mamba)
- standardize br tags (mamba)

4.33 RC 12  (XOOPS 2.5.8)      (2016-04-03)
===========================================
- removed @version (mamba)
- added auto-creation of /upload folders (aitor/mamba)
- added admin_footer.php (mamba)
- removed code for manual admin tabs (mamba)

4.33 RC 11  (XOOPS 2.5.8)      (2016-03-14)
===========================================
- issue 14: SEO images (slider84/montuy337513)
- issue 18: Array to string (cesagonchu/mamba)
- PHP7 and XOOPS 2.5.8 updates (mamba)

4.33 RC 10                   (2015-11-15)
===========================================
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- removed closing php tags (mamba)
- set min. PHP as 5.3.7 and min. XOOPS as 2.5.7 (mamba)
- replaced dirname(__FILE__) with __DIR__ (mamba)
- replaced $i++ with ++$i  (mamba)
- replaced $_POST and $_GET with XoopsRequest (mamba)
- replaced XOOPS_ROOT_PATH  with $GLOBALS['xoops']->path (mamba)
- added/fixed phpDoc headers (mamba)
- fixes by Bleekk
- replaced intval() with (int) (mamba)
- enforcing strict comparison (mamba)
- check for existence of Categories and Forums (cesagonchu/mamba)
- some PSR-2 code clean-up (mamba)
- bug fix: $cat_image in /index.php (mamba)
- bug fix: RSS (mamba)
- bug fix: in deleting posts (slider84/mamba)
- added conversion of "poster_ip" field to IPv6 format: varchar(45) (trabis/mamba)
- fix notices in Search (slider84/mamba)