@@ -545,3 +545,5 @@ define('_MD_NEWBB_AUTO_CREATE_EMAIL', 'Email');
 define('_MD_NEWBB_AUTO_CREATE_AVATARS', 'Avatar');
 define('_MD_NEWBB_AUTO_CREATE_ABOUT', '');
 define('_MD_NEWBB_NO_SELECTION', 'Selection required');
+
+define('_MD_NEWBB_FORUMDESCRIPTION', 'Forum Description:');
