@@ -7,6 +7,7 @@
 - lots of warning/error cleanup (geekwright)
 - extra code updates (mamba)
 - Short syntax in array literals (mamba)
+- added forumDescription to viewforum.php (aerograf/mamba)
 
 4.33 RC 13  (XOOPS 2.5.8)      (NOT RELEASED)
 ===========================================
